[gd_scene load_steps=64 format=2]

[ext_resource path="res://Main/Win/Win.gd" type="Script" id=1]
[ext_resource path="res://Other Resources/good_earth.png" type="Texture" id=2]
[ext_resource path="res://Other Resources/karma future.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/Audio/Select.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 700, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 800, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 900, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1000, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1700, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1800, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1900, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2000, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2700, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2800, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2900, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3000, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3700, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3800, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3900, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 4000, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 4100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 4200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 4300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 4400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 4500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 4600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 4700, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 4800, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 4900, 0, 100, 100 )

[sub_resource type="SpriteFrames" id=51]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="Gradient" id=52]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.172549, 0.117647, 0.192157, 1 )

[sub_resource type="GradientTexture" id=53]
gradient = SubResource( 52 )
width = 1

[sub_resource type="Gradient" id=54]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.243137, 0.231373, 0.396078, 1 )

[sub_resource type="GradientTexture" id=55]
gradient = SubResource( 54 )
width = 1

[sub_resource type="Gradient" id=56]
offsets = PoolRealArray( 0.695652 )
colors = PoolColorArray( 0.0627451, 0.0705882, 0.109804, 1 )

[sub_resource type="GradientTexture" id=57]
gradient = SubResource( 56 )
width = 1

[sub_resource type="DynamicFont" id=58]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=59]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Win" type="Node2D"]
script = ExtResource( 1 )

[node name="Node" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Node"]
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Node"]
position = Vector2( 437.726, 168.264 )
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 51 )
frame = 38
playing = true

[node name="Retry" type="TextureButton" parent="."]
margin_left = 40.0
margin_top = 180.0
margin_right = 154.0
margin_bottom = 233.0
texture_normal = SubResource( 53 )
texture_pressed = SubResource( 55 )
texture_hover = SubResource( 57 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Retry"]
margin_left = 4.94974
margin_top = -3.53554
margin_right = 129.95
margin_bottom = 45.4645
custom_fonts/font = SubResource( 58 )
custom_colors/font_color = Color( 0.968627, 0.952941, 0.717647, 1 )
text = "Retry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="ColorRect" parent="Retry"]
anchor_right = 1.0
margin_bottom = 3.0
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="ColorRect" parent="Retry"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 3.0
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="ColorRect" parent="Retry"]
anchor_bottom = 1.0
margin_right = 3.0
margin_bottom = 3.8147e-06
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="ColorRect" parent="Retry"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.0
margin_bottom = 3.0
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="TextureButton" parent="."]
margin_left = 40.0
margin_top = 255.0
margin_right = 333.0
margin_bottom = 308.0
texture_normal = SubResource( 53 )
texture_pressed = SubResource( 55 )
texture_hover = SubResource( 57 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu"]
margin_left = 4.94974
margin_top = -3.53554
margin_right = 129.95
margin_bottom = 45.4645
custom_fonts/font = SubResource( 58 )
custom_colors/font_color = Color( 0.968627, 0.952941, 0.717647, 1 )
text = "Return to Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="ColorRect" parent="Menu"]
anchor_right = 1.0
margin_bottom = 3.0
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="ColorRect" parent="Menu"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 3.0
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="ColorRect" parent="Menu"]
anchor_bottom = 1.0
margin_right = 3.0
margin_bottom = 3.8147e-06
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="ColorRect" parent="Menu"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.0
margin_bottom = 3.0
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 35.0
margin_top = 35.0
margin_right = 187.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 58 )
custom_colors/font_color = Color( 0.968627, 0.952941, 0.717647, 1 )
text = "You Win!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 35.0
margin_top = 97.1673
margin_right = 265.0
margin_bottom = 146.167
custom_fonts/font = SubResource( 59 )
custom_colors/font_color = Color( 0.968627, 0.952941, 0.717647, 1 )
text = "Score: XXXX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select" parent="." instance=ExtResource( 4 )]
[connection signal="button_up" from="Retry" to="." method="_on_Retry_button_up"]
[connection signal="button_up" from="Menu" to="." method="_on_Menu_button_up"]
